# uxui-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
examples/: login.rs  uxui_login.rs
examples/basic/src/: main.rs
future/root/: login.xml
shaders/: global_bindings.glsl  glyph_bindings.glsl  glyph_sdf.frag  glyph_sdf.vert  image.frag  image.vert  image_bindings.glsl  rect.frag  rect.vert  rect_bindings.glsl
shaders/compiled/: rect.vert.spv
src/: application.rs  component.rs  component_v2.rs  component_v3.rs  gfx.rs  lib.rs  scene.rs  window.rs
src/binding/: mod.rs
src/controls/: button.rs  image.rs  input.rs  mod.rs  text.rs
src/datatypes/: color.rs  mod.rs  sizing.rs
src/drawing/: image.rs  mod.rs  rect.rs  text.rs
src/font/: mod.rs
src/input_handling/: mod.rs
src/layouts/: column.rs  dock.rs  mod.rs  row.rs
src/observable/: mod.rs
