[package]
name = "uxui"
description = "A cross-platform UI framework"
version = "0.0.3-alpha"
authors = [ "Jacob Green" ]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/jacobrgreen114/uxui-rs"
build = "build.rs"

[dependencies]
winit = { version = "0.29.3", features = ["rwh_05"], default-features = false }
wgpu = { version = "0.17.1", features = ["spirv"], default-features = false }
glm = "0.2"
freetype-rs = "0.34.0"
futures = "0.3"
num-traits = "0.2"
lazy_static = "1.4"
image = "0.24"
# xgfx = { path = "../xgfx" }
